// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`allowed antd token key set is stable 1`] = `
[
  "borderRadius",
  "borderRadiusLG",
  "borderRadiusOuter",
  "borderRadiusSM",
  "borderRadiusXS",
  "boxShadow",
  "boxShadowDrawerLeft",
  "boxShadowDrawerRight",
  "boxShadowDrawerUp",
  "boxShadowPopoverArrow",
  "boxShadowSecondary",
  "boxShadowTabsOverflowBottom",
  "boxShadowTabsOverflowLeft",
  "boxShadowTabsOverflowRight",
  "boxShadowTabsOverflowTop",
  "boxShadowTertiary",
  "colorBgBase",
  "colorBgBlur",
  "colorBgContainer",
  "colorBgContainerDisabled",
  "colorBgElevated",
  "colorBgLayout",
  "colorBgMask",
  "colorBgSpotlight",
  "colorBgTextActive",
  "colorBgTextHover",
  "colorBorder",
  "colorBorderBg",
  "colorBorderSecondary",
  "colorError",
  "colorErrorActive",
  "colorErrorBg",
  "colorErrorBgActive",
  "colorErrorBgHover",
  "colorErrorBorder",
  "colorErrorBorderHover",
  "colorErrorHover",
  "colorErrorOutline",
  "colorErrorText",
  "colorErrorTextActive",
  "colorErrorTextHover",
  "colorFill",
  "colorFillAlter",
  "colorFillContent",
  "colorFillContentHover",
  "colorFillQuaternary",
  "colorFillSecondary",
  "colorFillTertiary",
  "colorHighlight",
  "colorIcon",
  "colorIconHover",
  "colorInfo",
  "colorInfoActive",
  "colorInfoBg",
  "colorInfoBgHover",
  "colorInfoBorder",
  "colorInfoBorderHover",
  "colorInfoHover",
  "colorInfoText",
  "colorInfoTextActive",
  "colorInfoTextHover",
  "colorLink",
  "colorLinkActive",
  "colorLinkHover",
  "colorPrimary",
  "colorPrimaryActive",
  "colorPrimaryBg",
  "colorPrimaryBgHover",
  "colorPrimaryBorder",
  "colorPrimaryBorderHover",
  "colorPrimaryHover",
  "colorPrimaryText",
  "colorPrimaryTextActive",
  "colorPrimaryTextHover",
  "colorSplit",
  "colorSuccess",
  "colorSuccessActive",
  "colorSuccessBg",
  "colorSuccessBgHover",
  "colorSuccessBorder",
  "colorSuccessBorderHover",
  "colorSuccessHover",
  "colorSuccessText",
  "colorSuccessTextActive",
  "colorSuccessTextHover",
  "colorText",
  "colorTextBase",
  "colorTextDescription",
  "colorTextDisabled",
  "colorTextHeading",
  "colorTextLabel",
  "colorTextLightSolid",
  "colorTextPlaceholder",
  "colorTextQuaternary",
  "colorTextSecondary",
  "colorTextTertiary",
  "colorWarning",
  "colorWarningActive",
  "colorWarningBg",
  "colorWarningBgHover",
  "colorWarningBorder",
  "colorWarningBorderHover",
  "colorWarningHover",
  "colorWarningOutline",
  "colorWarningText",
  "colorWarningTextActive",
  "colorWarningTextHover",
  "colorWhite",
  "controlHeight",
  "controlHeightLG",
  "controlHeightSM",
  "controlHeightXS",
  "controlInteractiveSize",
  "controlItemBgActive",
  "controlItemBgActiveDisabled",
  "controlItemBgActiveHover",
  "controlItemBgHover",
  "controlOutline",
  "controlOutlineWidth",
  "controlPaddingHorizontal",
  "controlPaddingHorizontalSM",
  "controlTmpOutline",
  "fontFamily",
  "fontFamilyCode",
  "fontHeight",
  "fontHeightLG",
  "fontHeightSM",
  "fontSize",
  "fontSizeHeading1",
  "fontSizeHeading2",
  "fontSizeHeading3",
  "fontSizeHeading4",
  "fontSizeHeading5",
  "fontSizeIcon",
  "fontSizeLG",
  "fontSizeSM",
  "fontSizeXL",
  "fontWeightStrong",
  "lineHeight",
  "lineHeightHeading1",
  "lineHeightHeading2",
  "lineHeightHeading3",
  "lineHeightHeading4",
  "lineHeightHeading5",
  "lineHeightLG",
  "lineHeightSM",
  "lineType",
  "lineWidth",
  "lineWidthBold",
  "lineWidthFocus",
  "linkDecoration",
  "linkFocusDecoration",
  "linkHoverDecoration",
  "margin",
  "marginLG",
  "marginMD",
  "marginSM",
  "marginXL",
  "marginXS",
  "marginXXL",
  "marginXXS",
  "motion",
  "motionBase",
  "motionDurationFast",
  "motionDurationMid",
  "motionDurationSlow",
  "motionEaseInBack",
  "motionEaseInOut",
  "motionEaseInOutCirc",
  "motionEaseInQuint",
  "motionEaseOut",
  "motionEaseOutBack",
  "motionEaseOutCirc",
  "motionEaseOutQuint",
  "motionUnit",
  "opacityImage",
  "opacityLoading",
  "padding",
  "paddingContentHorizontal",
  "paddingContentHorizontalLG",
  "paddingContentHorizontalSM",
  "paddingContentVertical",
  "paddingContentVerticalLG",
  "paddingContentVerticalSM",
  "paddingLG",
  "paddingMD",
  "paddingSM",
  "paddingXL",
  "paddingXS",
  "paddingXXS",
  "screenLG",
  "screenLGMax",
  "screenLGMin",
  "screenMD",
  "screenMDMax",
  "screenMDMin",
  "screenSM",
  "screenSMMax",
  "screenSMMin",
  "screenXL",
  "screenXLMax",
  "screenXLMin",
  "screenXS",
  "screenXSMax",
  "screenXSMin",
  "screenXXL",
  "screenXXLMin",
  "size",
  "sizeLG",
  "sizeMD",
  "sizeMS",
  "sizePopupArrow",
  "sizeSM",
  "sizeStep",
  "sizeUnit",
  "sizeXL",
  "sizeXS",
  "sizeXXL",
  "sizeXXS",
  "wireframe",
  "zIndexBase",
  "zIndexPopupBase",
]
`;

exports[`computed dark-mode token values match snapshot 1`] = `
{
  "borderRadius": 6,
  "borderRadiusLG": 8,
  "borderRadiusOuter": 4,
  "borderRadiusSM": 4,
  "borderRadiusXS": 2,
  "boxShadow": "
      0 6px 16px 0 rgba(255,255,255,0.016),
      0 3px 6px -4px rgba(255,255,255,0.024),
      0 9px 28px 8px rgba(255,255,255,0.010000000000000002)
    ",
  "boxShadowDrawerLeft": "
      6px 0 16px 0 rgba(255,255,255,0.016),
      3px 0 6px -4px rgba(255,255,255,0.024),
      9px 0 28px 8px rgba(255,255,255,0.010000000000000002)
    ",
  "boxShadowDrawerRight": "
      -6px 0 16px 0 rgba(255,255,255,0.016),
      -3px 0 6px -4px rgba(255,255,255,0.024),
      -9px 0 28px 8px rgba(255,255,255,0.010000000000000002)
    ",
  "boxShadowDrawerUp": "
      0 6px 16px 0 rgba(255,255,255,0.016),
      0 3px 6px -4px rgba(255,255,255,0.024),
      0 9px 28px 8px rgba(255,255,255,0.010000000000000002)
    ",
  "boxShadowPopoverArrow": "2px 2px 5px rgba(255,255,255,0.010000000000000002)",
  "boxShadowSecondary": "
      0 6px 16px 0 rgba(255,255,255,0.016),
      0 3px 6px -4px rgba(255,255,255,0.024),
      0 9px 28px 8px rgba(255,255,255,0.010000000000000002)
    ",
  "boxShadowTabsOverflowBottom": "inset 0 -10px 8px -8px rgba(255,255,255,0.016)",
  "boxShadowTabsOverflowLeft": "inset 10px 0 8px -8px rgba(255,255,255,0.016)",
  "boxShadowTabsOverflowRight": "inset -10px 0 8px -8px rgba(255,255,255,0.016)",
  "boxShadowTabsOverflowTop": "inset 0 10px 8px -8px rgba(255,255,255,0.016)",
  "boxShadowTertiary": "
      0 1px 2px 0 rgba(255,255,255,0.010000000000000002),
      0 1px 6px -1px rgba(255,255,255,0.006),
      0 2px 4px 0 rgba(255,255,255,0.006)
    ",
  "colorBgBase": "#000",
  "colorBgBlur": "rgba(255,255,255,0.04)",
  "colorBgContainer": "#141414",
  "colorBgContainerDisabled": "rgba(255,255,255,0.08)",
  "colorBgElevated": "#1f1f1f",
  "colorBgLayout": "#000000",
  "colorBgMask": "rgba(0,0,0,0.45)",
  "colorBgSpotlight": "#424242",
  "colorBgTextActive": "rgba(255,255,255,0.18)",
  "colorBgTextHover": "rgba(255,255,255,0.12)",
  "colorBorder": "#424242",
  "colorBorderBg": "#141414",
  "colorBorderSecondary": "#303030",
  "colorError": "#e04355",
  "colorErrorActive": "#99333e",
  "colorErrorBg": "#271619",
  "colorErrorBgActive": "#512228",
  "colorErrorBgHover": "#3e1b20",
  "colorErrorBorder": "#512228",
  "colorErrorBorderHover": "#702931",
  "colorErrorHover": "#d7646e",
  "colorErrorOutline": "rgba(231,42,76,0.09)",
  "colorErrorText": "#c13c4b",
  "colorErrorTextActive": "#99333e",
  "colorErrorTextHover": "#d7646e",
  "colorFill": "rgba(255,255,255,0.18)",
  "colorFillAlter": "rgba(255,255,255,0.04)",
  "colorFillContent": "rgba(255,255,255,0.12)",
  "colorFillContentHover": "rgba(255,255,255,0.18)",
  "colorFillQuaternary": "rgba(255,255,255,0.04)",
  "colorFillSecondary": "rgba(255,255,255,0.12)",
  "colorFillTertiary": "rgba(255,255,255,0.08)",
  "colorHighlight": "#c13c4b",
  "colorIcon": "rgba(255,255,255,0.45)",
  "colorIconHover": "rgba(255,255,255,0.85)",
  "colorInfo": "#66bcfe",
  "colorInfoActive": "#4981ac",
  "colorInfoBg": "#19222c",
  "colorInfoBgHover": "#223545",
  "colorInfoBorder": "#2d465a",
  "colorInfoBorderHover": "#39607d",
  "colorInfoHover": "#39607d",
  "colorInfoText": "#5aa3db",
  "colorInfoTextActive": "#4981ac",
  "colorInfoTextHover": "#83bfe8",
  "colorLink": "#2893B3",
  "colorLinkActive": "#21677b",
  "colorLinkHover": "#1d4d5c",
  "colorPrimary": "#2893B3",
  "colorPrimaryActive": "#21677b",
  "colorPrimaryBg": "#1a3a44",
  "colorPrimaryBgHover": "#1d4d5c",
  "colorPrimaryBorder": "#1a3a44",
  "colorPrimaryBorderHover": "#1d4d5c",
  "colorPrimaryHover": "#4499ae",
  "colorPrimaryText": "#25809b",
  "colorPrimaryTextActive": "#21677b",
  "colorPrimaryTextHover": "#4499ae",
  "colorSplit": "rgba(253,253,253,0.12)",
  "colorSuccess": "#5ac189",
  "colorSuccessActive": "#428460",
  "colorSuccessBg": "#17231d",
  "colorSuccessBgHover": "#1f362a",
  "colorSuccessBorder": "#294837",
  "colorSuccessBorderHover": "#346249",
  "colorSuccessHover": "#346249",
  "colorSuccessText": "#50a777",
  "colorSuccessTextActive": "#428460",
  "colorSuccessTextHover": "#77bc94",
  "colorText": "rgba(255,255,255,0.85)",
  "colorTextBase": "#fff",
  "colorTextDescription": "rgba(255,255,255,0.45)",
  "colorTextDisabled": "rgba(255,255,255,0.25)",
  "colorTextHeading": "rgba(255,255,255,0.85)",
  "colorTextLabel": "rgba(255,255,255,0.65)",
  "colorTextLightSolid": "#fff",
  "colorTextPlaceholder": "rgba(255,255,255,0.25)",
  "colorTextQuaternary": "rgba(255,255,255,0.25)",
  "colorTextSecondary": "rgba(255,255,255,0.65)",
  "colorTextTertiary": "rgba(255,255,255,0.45)",
  "colorWarning": "#fcc700",
  "colorWarningActive": "#ab8807",
  "colorWarningBg": "#2b2411",
  "colorWarningBgHover": "#45370f",
  "colorWarningBorder": "#5a4a0e",
  "colorWarningBorderHover": "#7c650b",
  "colorWarningHover": "#7c650b",
  "colorWarningOutline": "rgba(173,127,0,0.15)",
  "colorWarningText": "#d9ac03",
  "colorWarningTextActive": "#ab8807",
  "colorWarningTextHover": "#e8c427",
  "colorWhite": "#fff",
  "controlHeight": 32,
  "controlHeightLG": 40,
  "controlHeightSM": 24,
  "controlHeightXS": 16,
  "controlInteractiveSize": 16,
  "controlItemBgActive": "#1a3a44",
  "controlItemBgActiveDisabled": "rgba(255,255,255,0.18)",
  "controlItemBgActiveHover": "#1d4d5c",
  "controlItemBgHover": "rgba(255,255,255,0.08)",
  "controlOutline": "rgba(49,201,249,0.21)",
  "controlOutlineWidth": 2,
  "controlPaddingHorizontal": 12,
  "controlPaddingHorizontalSM": 8,
  "controlTmpOutline": "rgba(255,255,255,0.04)",
  "fontFamily": "'Inter', Helvetica, Arial",
  "fontFamilyCode": "'IBM Plex Mono', 'Courier New', monospace",
  "fontHeight": 22,
  "fontHeightLG": 24,
  "fontHeightSM": 20,
  "fontSize": 14,
  "fontSizeHeading1": 38,
  "fontSizeHeading2": 30,
  "fontSizeHeading3": 24,
  "fontSizeHeading4": 20,
  "fontSizeHeading5": 16,
  "fontSizeIcon": 12,
  "fontSizeLG": 16,
  "fontSizeSM": 12,
  "fontSizeXL": 20,
  "fontWeightStrong": 600,
  "lineHeight": 1.5714285714285714,
  "lineHeightHeading1": 1.2105263157894737,
  "lineHeightHeading2": 1.2666666666666666,
  "lineHeightHeading3": 1.3333333333333333,
  "lineHeightHeading4": 1.4,
  "lineHeightHeading5": 1.5,
  "lineHeightLG": 1.5,
  "lineHeightSM": 1.6666666666666667,
  "lineType": "solid",
  "lineWidth": 1,
  "lineWidthBold": 2,
  "lineWidthFocus": 3,
  "linkDecoration": "none",
  "linkFocusDecoration": "none",
  "linkHoverDecoration": "none",
  "margin": 16,
  "marginLG": 24,
  "marginMD": 20,
  "marginSM": 12,
  "marginXL": 32,
  "marginXS": 8,
  "marginXXL": 48,
  "marginXXS": 4,
  "motion": true,
  "motionBase": 0,
  "motionDurationFast": "0.1s",
  "motionDurationMid": "0.2s",
  "motionDurationSlow": "0.3s",
  "motionEaseInBack": "cubic-bezier(0.71, -0.46, 0.88, 0.6)",
  "motionEaseInOut": "cubic-bezier(0.645, 0.045, 0.355, 1)",
  "motionEaseInOutCirc": "cubic-bezier(0.78, 0.14, 0.15, 0.86)",
  "motionEaseInQuint": "cubic-bezier(0.755, 0.05, 0.855, 0.06)",
  "motionEaseOut": "cubic-bezier(0.215, 0.61, 0.355, 1)",
  "motionEaseOutBack": "cubic-bezier(0.12, 0.4, 0.29, 1.46)",
  "motionEaseOutCirc": "cubic-bezier(0.08, 0.82, 0.17, 1)",
  "motionEaseOutQuint": "cubic-bezier(0.23, 1, 0.32, 1)",
  "motionUnit": 0.1,
  "opacityImage": 1,
  "opacityLoading": 0.65,
  "padding": 16,
  "paddingContentHorizontal": 16,
  "paddingContentHorizontalLG": 24,
  "paddingContentHorizontalSM": 16,
  "paddingContentVertical": 12,
  "paddingContentVerticalLG": 16,
  "paddingContentVerticalSM": 8,
  "paddingLG": 24,
  "paddingMD": 20,
  "paddingSM": 12,
  "paddingXL": 32,
  "paddingXS": 8,
  "paddingXXS": 4,
  "screenLG": 992,
  "screenLGMax": 1199,
  "screenLGMin": 992,
  "screenMD": 768,
  "screenMDMax": 991,
  "screenMDMin": 768,
  "screenSM": 576,
  "screenSMMax": 767,
  "screenSMMin": 576,
  "screenXL": 1200,
  "screenXLMax": 1599,
  "screenXLMin": 1200,
  "screenXS": 480,
  "screenXSMax": 575,
  "screenXSMin": 480,
  "screenXXL": 1600,
  "screenXXLMin": 1600,
  "size": 16,
  "sizeLG": 24,
  "sizeMD": 20,
  "sizeMS": 16,
  "sizePopupArrow": 16,
  "sizeSM": 12,
  "sizeStep": 4,
  "sizeUnit": 4,
  "sizeXL": 32,
  "sizeXS": 8,
  "sizeXXL": 48,
  "sizeXXS": 4,
  "wireframe": false,
  "zIndexBase": 0,
  "zIndexPopupBase": 1000,
}
`;

exports[`computed light-mode token values match snapshot 1`] = `
{
  "borderRadius": 6,
  "borderRadiusLG": 8,
  "borderRadiusOuter": 4,
  "borderRadiusSM": 4,
  "borderRadiusXS": 2,
  "boxShadow": "
      0 6px 16px 0 rgba(0,0,0,0.08),
      0 3px 6px -4px rgba(0,0,0,0.12),
      0 9px 28px 8px rgba(0,0,0,0.05)
    ",
  "boxShadowDrawerLeft": "
      6px 0 16px 0 rgba(0,0,0,0.08),
      3px 0 6px -4px rgba(0,0,0,0.12),
      9px 0 28px 8px rgba(0,0,0,0.05)
    ",
  "boxShadowDrawerRight": "
      -6px 0 16px 0 rgba(0,0,0,0.08),
      -3px 0 6px -4px rgba(0,0,0,0.12),
      -9px 0 28px 8px rgba(0,0,0,0.05)
    ",
  "boxShadowDrawerUp": "
      0 6px 16px 0 rgba(0,0,0,0.08),
      0 3px 6px -4px rgba(0,0,0,0.12),
      0 9px 28px 8px rgba(0,0,0,0.05)
    ",
  "boxShadowPopoverArrow": "2px 2px 5px rgba(0,0,0,0.05)",
  "boxShadowSecondary": "
      0 6px 16px 0 rgba(0,0,0,0.08),
      0 3px 6px -4px rgba(0,0,0,0.12),
      0 9px 28px 8px rgba(0,0,0,0.05)
    ",
  "boxShadowTabsOverflowBottom": "inset 0 -10px 8px -8px rgba(0,0,0,0.08)",
  "boxShadowTabsOverflowLeft": "inset 10px 0 8px -8px rgba(0,0,0,0.08)",
  "boxShadowTabsOverflowRight": "inset -10px 0 8px -8px rgba(0,0,0,0.08)",
  "boxShadowTabsOverflowTop": "inset 0 10px 8px -8px rgba(0,0,0,0.08)",
  "boxShadowTertiary": "
      0 1px 2px 0 rgba(0,0,0,0.05),
      0 1px 6px -1px rgba(0,0,0,0.03),
      0 2px 4px 0 rgba(0,0,0,0.03)
    ",
  "colorBgBase": "#fff",
  "colorBgBlur": "transparent",
  "colorBgContainer": "#ffffff",
  "colorBgContainerDisabled": "rgba(0,0,0,0.04)",
  "colorBgElevated": "#ffffff",
  "colorBgLayout": "#f5f5f5",
  "colorBgMask": "rgba(0,0,0,0.45)",
  "colorBgSpotlight": "rgba(0,0,0,0.85)",
  "colorBgTextActive": "rgba(0,0,0,0.15)",
  "colorBgTextHover": "rgba(0,0,0,0.06)",
  "colorBorder": "#d9d9d9",
  "colorBorderBg": "#ffffff",
  "colorBorderSecondary": "#f0f0f0",
  "colorError": "#e04355",
  "colorErrorActive": "#ba2f43",
  "colorErrorBg": "#fff0f0",
  "colorErrorBgActive": "#ffc7c8",
  "colorErrorBgHover": "#fff0f0",
  "colorErrorBorder": "#ffc7c8",
  "colorErrorBorderHover": "#fa9ba0",
  "colorErrorHover": "#ed6d78",
  "colorErrorOutline": "rgba(255,5,5,0.06)",
  "colorErrorText": "#e04355",
  "colorErrorTextActive": "#ba2f43",
  "colorErrorTextHover": "#ed6d78",
  "colorFill": "rgba(0,0,0,0.15)",
  "colorFillAlter": "rgba(0,0,0,0.02)",
  "colorFillContent": "rgba(0,0,0,0.06)",
  "colorFillContentHover": "rgba(0,0,0,0.15)",
  "colorFillQuaternary": "rgba(0,0,0,0.02)",
  "colorFillSecondary": "rgba(0,0,0,0.06)",
  "colorFillTertiary": "rgba(0,0,0,0.04)",
  "colorHighlight": "#e04355",
  "colorIcon": "rgba(0,0,0,0.45)",
  "colorIconHover": "rgba(0,0,0,0.88)",
  "colorInfo": "#66bcfe",
  "colorInfoActive": "#4c97d9",
  "colorInfoBg": "#f0fbff",
  "colorInfoBgHover": "#f0faff",
  "colorInfoBorder": "#e0f5ff",
  "colorInfoBorderHover": "#b8e5ff",
  "colorInfoHover": "#b8e5ff",
  "colorInfoText": "#66bcfe",
  "colorInfoTextActive": "#4c97d9",
  "colorInfoTextHover": "#8fd2ff",
  "colorLink": "#2893B3",
  "colorLinkActive": "#186d8c",
  "colorLinkHover": "#6ebccc",
  "colorPrimary": "#2893B3",
  "colorPrimaryActive": "#186d8c",
  "colorPrimaryBg": "#e4f1f2",
  "colorPrimaryBgHover": "#c5e2e6",
  "colorPrimaryBorder": "#98d0d9",
  "colorPrimaryBorderHover": "#6ebccc",
  "colorPrimaryHover": "#49a8bf",
  "colorPrimaryText": "#2893b3",
  "colorPrimaryTextActive": "#186d8c",
  "colorPrimaryTextHover": "#49a8bf",
  "colorSplit": "rgba(5,5,5,0.06)",
  "colorSuccess": "#5ac189",
  "colorSuccessActive": "#419c6d",
  "colorSuccessBg": "#f0fff4",
  "colorSuccessBgHover": "#e6f5eb",
  "colorSuccessBorder": "#dae8df",
  "colorSuccessBorderHover": "#addbbf",
  "colorSuccessHover": "#addbbf",
  "colorSuccessText": "#5ac189",
  "colorSuccessTextActive": "#419c6d",
  "colorSuccessTextHover": "#82cfa2",
  "colorText": "rgba(0,0,0,0.88)",
  "colorTextBase": "#000",
  "colorTextDescription": "rgba(0,0,0,0.45)",
  "colorTextDisabled": "rgba(0,0,0,0.25)",
  "colorTextHeading": "rgba(0,0,0,0.88)",
  "colorTextLabel": "rgba(0,0,0,0.65)",
  "colorTextLightSolid": "#fff",
  "colorTextPlaceholder": "rgba(0,0,0,0.25)",
  "colorTextQuaternary": "rgba(0,0,0,0.25)",
  "colorTextSecondary": "rgba(0,0,0,0.65)",
  "colorTextTertiary": "rgba(0,0,0,0.45)",
  "colorWarning": "#fcc700",
  "colorWarningActive": "#d6a100",
  "colorWarningBg": "#fffee6",
  "colorWarningBgHover": "#fff7a3",
  "colorWarningBorder": "#fff07a",
  "colorWarningBorderHover": "#ffe552",
  "colorWarningHover": "#ffe552",
  "colorWarningOutline": "rgba(255,245,5,0.1)",
  "colorWarningText": "#fcc700",
  "colorWarningTextActive": "#d6a100",
  "colorWarningTextHover": "#ffd829",
  "colorWhite": "#fff",
  "controlHeight": 32,
  "controlHeightLG": 40,
  "controlHeightSM": 24,
  "controlHeightXS": 16,
  "controlInteractiveSize": 16,
  "controlItemBgActive": "#e4f1f2",
  "controlItemBgActiveDisabled": "rgba(0,0,0,0.15)",
  "controlItemBgActiveHover": "#c5e2e6",
  "controlItemBgHover": "rgba(0,0,0,0.04)",
  "controlOutline": "rgba(10,128,137,0.11)",
  "controlOutlineWidth": 2,
  "controlPaddingHorizontal": 12,
  "controlPaddingHorizontalSM": 8,
  "controlTmpOutline": "rgba(0,0,0,0.02)",
  "fontFamily": "'Inter', Helvetica, Arial",
  "fontFamilyCode": "'IBM Plex Mono', 'Courier New', monospace",
  "fontHeight": 22,
  "fontHeightLG": 24,
  "fontHeightSM": 20,
  "fontSize": 14,
  "fontSizeHeading1": 38,
  "fontSizeHeading2": 30,
  "fontSizeHeading3": 24,
  "fontSizeHeading4": 20,
  "fontSizeHeading5": 16,
  "fontSizeIcon": 12,
  "fontSizeLG": 16,
  "fontSizeSM": 12,
  "fontSizeXL": 20,
  "fontWeightStrong": 600,
  "lineHeight": 1.5714285714285714,
  "lineHeightHeading1": 1.2105263157894737,
  "lineHeightHeading2": 1.2666666666666666,
  "lineHeightHeading3": 1.3333333333333333,
  "lineHeightHeading4": 1.4,
  "lineHeightHeading5": 1.5,
  "lineHeightLG": 1.5,
  "lineHeightSM": 1.6666666666666667,
  "lineType": "solid",
  "lineWidth": 1,
  "lineWidthBold": 2,
  "lineWidthFocus": 3,
  "linkDecoration": "none",
  "linkFocusDecoration": "none",
  "linkHoverDecoration": "none",
  "margin": 16,
  "marginLG": 24,
  "marginMD": 20,
  "marginSM": 12,
  "marginXL": 32,
  "marginXS": 8,
  "marginXXL": 48,
  "marginXXS": 4,
  "motion": true,
  "motionBase": 0,
  "motionDurationFast": "0.1s",
  "motionDurationMid": "0.2s",
  "motionDurationSlow": "0.3s",
  "motionEaseInBack": "cubic-bezier(0.71, -0.46, 0.88, 0.6)",
  "motionEaseInOut": "cubic-bezier(0.645, 0.045, 0.355, 1)",
  "motionEaseInOutCirc": "cubic-bezier(0.78, 0.14, 0.15, 0.86)",
  "motionEaseInQuint": "cubic-bezier(0.755, 0.05, 0.855, 0.06)",
  "motionEaseOut": "cubic-bezier(0.215, 0.61, 0.355, 1)",
  "motionEaseOutBack": "cubic-bezier(0.12, 0.4, 0.29, 1.46)",
  "motionEaseOutCirc": "cubic-bezier(0.08, 0.82, 0.17, 1)",
  "motionEaseOutQuint": "cubic-bezier(0.23, 1, 0.32, 1)",
  "motionUnit": 0.1,
  "opacityImage": 1,
  "opacityLoading": 0.65,
  "padding": 16,
  "paddingContentHorizontal": 16,
  "paddingContentHorizontalLG": 24,
  "paddingContentHorizontalSM": 16,
  "paddingContentVertical": 12,
  "paddingContentVerticalLG": 16,
  "paddingContentVerticalSM": 8,
  "paddingLG": 24,
  "paddingMD": 20,
  "paddingSM": 12,
  "paddingXL": 32,
  "paddingXS": 8,
  "paddingXXS": 4,
  "screenLG": 992,
  "screenLGMax": 1199,
  "screenLGMin": 992,
  "screenMD": 768,
  "screenMDMax": 991,
  "screenMDMin": 768,
  "screenSM": 576,
  "screenSMMax": 767,
  "screenSMMin": 576,
  "screenXL": 1200,
  "screenXLMax": 1599,
  "screenXLMin": 1200,
  "screenXS": 480,
  "screenXSMax": 575,
  "screenXSMin": 480,
  "screenXXL": 1600,
  "screenXXLMin": 1600,
  "size": 16,
  "sizeLG": 24,
  "sizeMD": 20,
  "sizeMS": 16,
  "sizePopupArrow": 16,
  "sizeSM": 12,
  "sizeStep": 4,
  "sizeUnit": 4,
  "sizeXL": 32,
  "sizeXS": 8,
  "sizeXXL": 48,
  "sizeXXS": 4,
  "wireframe": false,
  "zIndexBase": 0,
  "zIndexPopupBase": 1000,
}
`;
